# SecureVault

./: CMakeLists.txt  README.md  backup_config.json
cmake/: FindJsonCpp.cmake  FindLibssh.cmake
include/: backup.hpp  backup_api.hpp  backup_config.hpp  database_backup.hpp  file_backup.hpp  notification.hpp  remote_transfer.hpp
src/: backup.cpp  backup_api.cpp  backup_config.cpp  database_backup.cpp  file_backup.cpp  notification.cpp  remote_transfer.cpp  remote_transfer_stub.cpp
